MH: add new tests for app controller